# middleware

nas_ports/databases/ldb/: Makefile  distinfo
nas_ports/databases/tdb/: Makefile  distinfo
nas_ports/devel/p5-Parse-Pidl/: Makefile
nas_ports/devel/py-apscheduler/: Makefile  distinfo
nas_ports/devel/py-docker/: Makefile  distinfo
nas_ports/devel/py-docker-pycreds/: Makefile  distinfo  pkg-descr
nas_ports/devel/py-gevent/: Makefile
nas_ports/devel/py-jsonpatch/: Makefile  distinfo
nas_ports/devel/py-jsonpickle/: Makefile  distinfo  pkg-descr
nas_ports/devel/py-pushbullet/: Makefile  distinfo  pkg-descr
nas_ports/devel/py-redmine/: Makefile  distinfo  pkg-descr
nas_ports/devel/py-tables/: Makefile
nas_ports/devel/py-tzlocal/: Makefile  distinfo  pkg-descr
nas_ports/devel/talloc/: distinfo
nas_ports/devel/tevent/: Makefile  distinfo
nas_ports/freenas/freenas-alertd/: Makefile
nas_ports/freenas/freenas-containerd/: Makefile  pkg-plist
nas_ports/freenas/freenas-crashd/: Makefile  pkg-plist
nas_ports/freenas/freenas-datastore/: Makefile  pkg-plist
nas_ports/freenas/freenas-dispatcher/: Makefile  pkg-plist
nas_ports/freenas/freenas-etcd/: Makefile
nas_ports/freenas/freenas-fnstatd/: Makefile
nas_ports/freenas/freenas-installer/: Makefile  pkg-plist
nas_ports/freenas/freenas-logd/: Makefile  pkg-descr  pkg-plist
nas_ports/freenas/freenas-migrate93/: Makefile
nas_ports/freenas/freenas-networkd/: Makefile
nas_ports/freenas/freenas-pkgtools/: pkg-plist
nas_ports/freenas/freenas-schedulerd/: Makefile  pkg-plist
nas_ports/freenas/freenas-serviced/: Makefile  pkg-plist
nas_ports/freenas/freenas-splash/: Makefile  pkg-plist
nas_ports/freenas/js-freenas.dispatcher/: Makefile
nas_ports/freenas/liblogd/: Makefile  pkg-descr  pkg-plist
nas_ports/freenas/libserviced/: Makefile  pkg-descr  pkg-plist
nas_ports/freenas/py-freenas.dispatcher/: Makefile
nas_ports/freenas/py-freenas.utils/: Makefile
nas_ports/freenas/py-libzfs/: Makefile
nas_ports/freenas/py-logd/: Makefile  pkg-descr
nas_ports/freenas/py-serviced/: Makefile
nas_ports/freenas/py-smbconf/: Makefile
nas_ports/freenas/py-wbclient/: Makefile
nas_ports/freenas/syslog-ng-serviced/: Makefile  pkg-descr  pkg-plist
nas_ports/lang/python36/: pkg-plist
nas_ports/net-mgmt/collectd5/: Makefile
nas_ports/net-mgmt/netdata/: Makefile  distinfo  pkg-plist
nas_ports/net/netatalk3/: Makefile
nas_ports/net/samba45/: Makefile  pkg-plist
nas_ports/security/py-backports.ssl_match_hostname/: Makefile  distinfo  pkg-descr
src/alertd/src/: main.py
src/containerd/: Makefile
src/crashd/: Makefile
src/datastore/: Makefile
src/dispatcher/: Makefile  requirements.txt  setup.py
src/liblogd/: CMakeLists.txt  liblogd.c  liblogd.h
src/libserviced/: CMakeLists.txt  serviced.c  serviced.h
src/logd/: Makefile
src/py-logd/: setup.py
src/py-serviced/: setup.py
src/serviced/: Makefile
src/splash/: Makefile
src/syslog-ng-serviced/: CMakeLists.txt  serviced.c
tools/: dispatcher_rsync_exclude_list.txt  freenasdev
(+334 files in other folders)
